samples/_failures_safe/1761790355_2952cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f7281a5.c: In function ‘main’:
./samples/SAFE/__tmp_6f7281a5.c:144:58: error: ‘sample’ undeclared (first use in this function)
  144 |     if (add_compression_block(&ctx, sample_data1, sizeof(sample
      |                                                          ^~~~~~
./samples/SAFE/__tmp_6f7281a5.c:144:58: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6f7281a5.c:144:64: error: expected ‘)’ at end of input
  144 |     if (add_compression_block(&ctx, sample_data1, sizeof(sample
      |                                                         ~      ^
      |                                                                )
./samples/SAFE/__tmp_6f7281a5.c:144:5: error: expected declaration or statement at end of input
  144 |     if (add_compression_block(&ctx, sample_data1, sizeof(sample
      |     ^~
